--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,6 @@
 div.container.center.index
   div.header
-    h1='2011 자바 개발자 컨퍼런스 피드백'
+    h1='The 2011 Java Developers Conference'
   div.article
     form(method='post', action='/login')
       h4.subheader='What\'s your name?'
