--- a/views/list-mgt.jade
+++ b/views/list-mgt.jade
@@ -1,6 +1,6 @@
 div.container.center
 	div.header
-		h1='The 11th JCO Schedule'
+		h1='The 2011 Java Developers Conference's Schedules'
 	div.form
 		form(method='post', action='/list/add')
 			label title
