--- a/views/list.jade
+++ b/views/list.jade
@@ -1,6 +1,6 @@
 div.container.center
   div.header
-    h1='The 11th JCO Schedule'
+    h1='The 2011 Java Developers Conference's Schedules'
   div.article
     ul.list
       - each p in result
