--- a/views/presentation.jade
+++ b/views/presentation.jade
@@ -175,9 +175,12 @@ div.container.presentation
     li 
       em(data-emotion="!Good") #{ngCnt} 
       label !Good
-    li.last-child
+    li
       em(data-emotion="Ask") #{askCnt} 
       label Ask
+    li.last-child
+      em(data-emotion="Users") 0 
+      label Users
   ul.tabs
     li  
       a(href="/comments/",class="active", data-emotion="*") 
